Bruk toList() isteden for collect(Collectors.toList()) på immutable list